Complete UserRedux component with CRUD api user information (with image)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -60,6 +60,7 @@
         "position": "Position",
         "role": "Role",
         "image": "Avatar",
-        "save": "Save"
+        "save": "Save",
+        "edit": "Edit"
     }
 }
