--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -60,6 +60,7 @@
         "position": "Chức danh",
         "role": "Vai trò",
         "image": "Ảnh đại diện",
-        "save": "Lưu"
+        "save": "Lưu",
+        "edit": "Lưu thay đổi"
     }
 }
